# ml-foundations-msc-ppgi

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/: data_bivariate_gaussian.csv  data_bivariate_gaussian.npz
notebooks/: 00-setup.py  01-dataset.ipynb  10-kmeans.ipynb  11-fcm.ipynb  20-logreg.ipynb  21-ann.ipynb  21-mlp.ipynb  22-svm.ipynb  23-tree.ipynb  24-knn.ipynb
src/ml/: data.py  viz.py
src/tasks/: ann.py  fcm.py  kmeans.py  knn.py  logreg.py  svm.py  tree.py
utils/: ipynb2pdf_batch.ipynb
